# fgp-gmail

./: .gitignore  Cargo.toml  Dockerfile  README.md  manifest.json
.github/workflows/: ci.yml  release.yml
examples/: basic_operations.py
module/: gmail.py
scripts/: gmail-cli.py
skills/claude-code/: SKILL.md
skills/continue/: gmail.yaml
skills/cursor/: gmail.mdc
skills/windsurf/: gmail.md
src/: main.rs
