[package]
name = "fgp-gmail"
version = "1.0.0"
edition = "2021"
description = "FGP daemon for Gmail - fast email operations"
authors = ["Wolfgang Schoenberger"]
license = "MIT"
repository = "https://github.com/wolfiesch/fgp-gmail"

[[bin]]
name = "fgp-gmail"
path = "src/main.rs"

[dependencies]
# FGP daemon SDK
fgp-daemon = { path = "../fgp-daemon" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Home directory
dirs = "6.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
